--- a/style.css
+++ b/style.css
@@ -12,3 +12,14 @@
 .btn-space {
 	margin: 10px;
 }
+
+.haba {
+	width: 900px; 
+	height: 800px;
+}
+
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
